<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".DetailActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/mainBackground"
        app:cardElevation="3dp"
        app:cardMaxElevation="5dp"
        android:layout_alignParentTop="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/mainBackground"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:background="@color/mainBackground"
                android:textColor="@color/colorActivityBackground"
                android:fontFamily="sans-serif-light"
                android:textSize="20sp"
                android:gravity="center"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:textSize="25dp"
        android:id="@+id/button2"
        android:layout_width="271dp"
        android:layout_height="57dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/switch_btn_bg"
        android:text="@string/news_bt"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:textAllCaps="false"
        android:textColor="@color/mainBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/button"
        android:layout_width="271dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/switch_btn_bg"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/fix_bt"
        android:textSize="25dp"
        android:textAllCaps="false"
        android:textColor="@color/mainBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button7"
        android:layout_width="271dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/switch_btn_bg"
        android:paddingStart="32dp"
        android:textSize="25dp"
        android:paddingEnd="32dp"
        android:text="@string/sta_bt"
        android:textAllCaps="false"
        android:textColor="@color/mainBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button8"
        android:textSize="25dp"
        android:layout_width="271dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/switch_btn_bg"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/tran_bt"
        android:textAllCaps="false"
        android:textColor="@color/mainBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintVertical_bias="0.007" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        android:src="@drawable/barcelona" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />
</androidx.constraintlayout.widget.ConstraintLayout>